--- a/index.css
+++ b/index.css
@@ -23,3 +23,398 @@ body {
     width: 1600px;
     padding: 0 215px;
 }
+
+/*header*/
+
+.header {
+    padding: 0 215px;
+}
+
+.menu {
+    width: 1600px;
+    height: 80px;
+    margin-bottom: 46px;
+
+    display: flex;
+}
+
+.menu__logo {
+    display: flex;
+}
+
+.menu__logo__img {
+    width: 46px;
+    height: 46px;
+    margin-top: 17px;
+    margin-right: 20px;
+}
+
+.menu__logo__text {
+    margin-top: 31px;
+    margin-right: 103px;
+
+    font-size: 15px;
+    line-height: 19px;
+    font-weight: 900;
+    color: #E9473C;
+}
+
+.nav {
+    margin-top: 32px;
+    margin-right: 50px;
+}
+
+.nav__link {
+    margin-right: 65px;
+
+    font-size: 12px;
+    line-height: 15px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.nav__link:hover {
+    color: #E9473C;
+} 
+
+.menu__contact {
+    display: flex;
+}
+
+.menu__contact__number {
+    margin-top: 31px;
+    margin-right: 35px;
+
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+}
+
+.menu__contact__button {
+    width: 197px;
+    height: 35px;
+    margin-top: 22px;
+
+    background-color: #ffffff;
+    border-color: #E9473C;
+}
+
+.menu__contact__button__text {
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+
+    color: #E9473C;
+}
+
+/*main*/
+
+.main {
+    padding: 0 215px;
+}
+
+.main_screen {
+    width: 1600px;
+    height: 649px;
+    margin-bottom: 80px;
+    position: relative;
+}
+
+.main_screen__second_img {
+    position: absolute;
+    margin-top: 67px;
+    margin-left: 690px;
+}
+
+.main_screen__basic_img {
+    position: absolute;
+}
+
+.main_screen_dog_face {
+    position: absolute;
+    margin-left: 508px;
+}
+
+.main_screen__title {
+    position: absolute;
+    margin-top: 128px;
+    margin-left: 100px;
+
+    font-size: 35px;
+    line-height: 43px;
+    font-weight: 900;
+}
+
+.main_screen__sub_title {
+    position: absolute;
+    margin-top: 244px;
+    margin-left: 100px;
+
+    font-size:20px;
+    line-height: 25px;
+    font-weight: 400;
+}
+
+.main_screen__button {
+    width: 240px;
+    height: 60px;
+    position: absolute;
+    margin-top: 370px;
+    margin-left: 100px;
+
+    background: #E9473C;
+    border: none;
+}
+
+.main_screen__button_text {
+    font-size:16px;
+    line-height: 20px;
+    font-weight: 900;
+
+    color: #ffffff;
+}
+
+.catalog {
+    width: 1600px;
+    height: 479px;
+    margin-bottom: 80px;
+}
+
+.catalog__menu {
+    margin-bottom: 40px;
+    display: flex;
+}
+
+.catalog__menu__title {
+    margin-right: 68px;
+
+    font-size: 25px;
+    line-height: 31px;
+    font-weight: 900;
+}
+
+.catalog__menu__nav {
+    margin-top: 4px;
+}
+
+.catalog__menu__nav__link {
+    margin-right: 40px;
+
+    font-size: 17px;
+    line-height: 21px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #000000;
+}
+
+.catalog__menu__nav__link:hover {
+    color: #E9473C;
+} 
+
+.catalog__menu__ellipse {
+    width: 5px;
+    height: 5px;
+    margin-top: 12px;
+    margin-right: 5px;
+}
+
+.catalog_content {
+    display: flex;
+}
+
+.catalog_content__vector_left {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  	border: 0;
+  	border-radius: 0;
+  	background: #ffffff;
+    margin-top: 140px;
+    margin-left: -60.5px;
+    margin-right: 30px;
+    width: 30px;
+    height: 36px;
+}
+
+.catalog_content__vector_left:hover {
+    background: #E9473C;
+}
+
+.catalog_content__vector_left:focus {
+     outline: none;
+     box-shadow: 0 0 0 4px #E9473C;
+}
+
+.catalog_content__button {
+    width: 15px;
+    height: 31px;
+}
+
+.catalog_content__card {
+    width: 270px;
+    height: 350px;
+    margin-right: 30px;
+    text-align: center;
+    box-shadow: 0px 0px 20px -7px rgba(0, 0, 0, 0.25);
+}
+
+.catalog_content__card__img {
+    margin-top: 35px;
+    margin-bottom: 15px;
+}
+
+.catalog_content__card__title {
+    margin-bottom: 15px;
+
+    font-size: 17px;
+    line-height: 21px;
+    font-weight: 900;
+}
+
+.catalog_content__card__price {
+    display: flex;
+}
+
+.catalog_content__card__price__new {
+    margin-top: 3px;
+    margin-right: 9px;
+    margin-left: 48px;
+
+    font-size: 15px;
+    line-height: 19px;
+    font-weight: 900;
+    color: #E9473C;
+}
+
+.catalog_content__card__price__old {
+    margin-right: 52px;
+
+    font-size: 10px;
+    line-height: 13px;
+    font-weight: 900;
+    color: #E9473C;
+}
+
+.catalog_content__card__price__vector {
+    margin-top: 5px;
+    width: 14.5px;
+    height: 15px;
+}
+
+.catalog_content__vector_right {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  	border: 0;
+  	border-radius: 0;
+  	background: #ffffff;
+    margin-top: 140px;
+    margin-right: 15px;
+    width: 30px;
+    height: 36px;
+}
+
+.catalog_content__vector_right:hover {
+    background: #E9473C;
+}
+
+.catalog_content__vector_right:focus {
+     outline: none;
+     box-shadow: 0 0 0 4px #E9473C;
+}
+
+.gallery {
+    width: 1600px;
+    height: 639px;
+    margin-bottom: 80px;
+}
+
+.gallery_title {
+    margin-bottom: 35px;
+    font-size: 25px;
+    line-height: 31px;
+    font-weight: 900;
+}
+
+.gallery_container {
+    display: flex;
+}
+
+.gallery_container__box {
+    margin-right: 17px;
+    border: none;
+}
+
+.gallery_container__box__top {
+    margin-bottom: 17px;
+}
+
+.gallery_container__box__bottom {
+    display: flex;
+}
+
+.gallery_container__box__bottom_left {
+    margin-right: 12px;
+}
+
+.about {
+    width: 1600px;
+    margin-bottom: 80px;
+    display: flex;
+}
+
+.about__column_left {
+    width: 517px;
+    margin-right: 58px;
+}
+
+.about__column_left__title {
+    margin-bottom: 35px;
+    font-size: 25px;
+    line-height: 31px;
+    font-weight: 900;
+}
+
+.about__column_left__discription {
+    margin-bottom: 20px;
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: 400;
+}
+
+.about__column_left__button {
+    width: 164px;
+    height: 22px;
+    position: absolute;
+
+    background: #ffffff;
+    border: none;
+}
+
+.about__column_left__button__title {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 700;
+}
+
+.about__column_right { 
+    margin-top: 73px;
+}
+
+.footer {
+    padding-top: 65px;
+    padding-left: 215px;
+    padding-right: 215px;
+    width: 1600px;
+    height: 174px;
+    background-color: #757575;
+}
+
+.menu__top {
+    margin-right: 53px;
+    margin-top: 40px;
+}
+
+.buttom_menu {
+    margin-top: 65px;
+}
